tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/dns/a/tcp_ipv6/_test_context/ServiceEntry.2325635322.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dns
  namespace: echo-2-88348
spec:
  addresses:
  - 1234:1234:1234::1234:1234:1234
  endpoints: []
  hosts:
  - fake.service.local
  ports:
  - name: http
    number: 80
    protocol: HTTP
  resolution: STATIC
